--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
