Solucion ESLint y CSV

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,5 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "types.ts"],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "react-csv.d.ts"],
 }
