--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "dayjs-plugin-utc": "^0.1.2",
+    "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "lucide-react": "^0.379.0",
     "next": "^14.2.24",
@@ -42,6 +43,7 @@
     "@typescript-eslint/parser": "^8.26.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "^10.1.1",
     "jest": "^29.7.0",
     "postcss": "^8",
     "prisma": "^6.4.1",
