--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
     "postcss": "^8",
     "prisma": "^6.4.1",
