--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@as-integrations/next": "^3.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.4.1",
-    "apollo-server-errors": "^3.3.1",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -41,13 +40,15 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
-    "eslint": "^8",
+    "eslint": "^9.22.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "glob": "^11.0.1",
     "jest": "^29.7.0",
     "postcss": "^8",
     "prisma": "^6.4.1",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.6",
     "typescript": "^5"
