--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@apollo/server": "^4.10.4",
     "@as-integrations/next": "^3.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.4.1",
+    "@prisma/client": "^6.5.0",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -33,10 +33,11 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@eslint/config-array": "^0.19.2",
+    "@eslint/object-schema": "^2.1.6",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
