--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.379.0",
     "next": "^14.2.24",
     "next-auth": "^4.24.11",
+    "prisma": "^6.5.0",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
     "react-csv": "^2.2.2",
@@ -45,11 +47,9 @@
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
-    "glob": "^11.0.1",
     "jest": "^29.7.0",
+    "patch-package": "^8.0.0",
     "postcss": "^8",
-    "prisma": "^6.4.1",
-    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.6",
     "typescript": "^5"
